--- a/main-en.tex
+++ b/main-en.tex
@@ -106,22 +106,19 @@
     \end{itemize}
   \item The negation of the parallel postulate leads to no contradiction with the other postulates.
     \begin{itemize}
-      \item Lobachevsky, along with János Bolyai, independently proposed a system where infinitely many parallels exist, leading to no contradictions within the geometry itself.
+      \item Lobachevsky (1792-1856), along with János Bolyai (1802-1860), independently proposed a system where many parallels exist, leading to no contradictions within the geometry itself.
     \end{itemize}
   \end{itemize}
 \end{frame}
 \begin{frame}
-  \frametitle{Examples of Non-Euclidean Spaces}
-  {\large Great circles on a sphere must intersect.}
-  \blfootnote{Figure from "An Introduction to Structuralism"\supercite{structure}}
+  \frametitle{Non-Euclidean geometries}
+  {\large For instance, in spherical geometry, great circles on a sphere intersect at exactly two points.}
+  \blfootnote{Figure adapted from "はじめての構造主義"\supercite{structure}}
   \begin{figure}
-    \includegraphics[width=0.5\textwidth]{images/non-euclid.png}
-    \caption{Example of a non-Euclidean space}
+    \includegraphics[width=0.4\textwidth]{images/non-euclid.png}
+    \caption{Spherical space and hyperbolic space}
   \end{figure}
-  \begin{itemize}
-  \item Great circles are cross-sections of spheres passing through the center.
-  \item Great circles correspond to straight lines in Euclidean geometry.
-  \end{itemize}
+  In spherical geometry, a great circle corresponds to a straight line in Euclidean geometry.
 \end{frame}
 % \section{Naive Set Theory}
 % \begin{frame}
