--- a/main.tex
+++ b/main.tex
@@ -159,8 +159,8 @@
   \par
   例
   \begin{enumerate}
-  \item 空集合$\phi$を$\{x|x\neq x\}$とする
-  \item $\phi$を$0$となづける
+  \item 空集合$\emptyset$を$\{x|x\neq x\}$とする
+  \item $\emptyset$を$0$となづける
   \item 空集合1つからなる集合$\{\phi\}$を$1$となづける
   \item $\{0, 1\}$を$2$となづける
   \item $\vdots$
