--- a/main-en.tex
+++ b/main-en.tex
@@ -69,8 +69,7 @@
   \item[Definition 1] A point is that of which there is no part.
   \item[Definition 2] A line is a length without breadth.
   \item[Definition 3] A surface is that which has length and breadth only.
-  \item[Axiom 5] \textcolor{highlight}{The whole is greater than the part.}
-  % \item[Proposition 5] For isosceles triangles, the angles at the base are equal to one another, and if the equal sides are produced then the angles under the base will be equal to one another.
+  \item[Axiom 5] The whole is greater than the part.
   \end{description}
 \end{frame}
 \begin{frame}
@@ -171,11 +170,12 @@
   {\large The approach to calculate inference by manipulating symbols was already explored in the 17th century.}  
   \begin{columns}
     \begin{column}{0.55\textwidth}
-      {\setlength{\leftmarginii}{16pt}
+      {\setlength{\leftmargini}{0.05\paperwidth}
+       \setlength{\leftmarginii}{16pt}
       \begin{itemize}
         \item Calculus derivatives
         \item The binary number system
-        \item \textcolor{highlight}{characteristica universalis}
+        \item characteristica universalis
           \begin{itemize}
           \item a universal system of signs to eliminate the ambiguity of natural nlanguage by developing an alphabet of human thoughts
           \end{itemize}
@@ -199,7 +199,7 @@
       \begin{center}
         "The Laws of Thought"\supercite{bool}
         \begin{quotation}
-          Let us then agree to represent \textcolor{highlight}{the class of individuals to which a particular name or description is applicable, by a single letter, as x}. If the name is “men,” for instance, let x represent “all men,”
+          Let us then agree to represent the class of individuals to which a particular name or description is applicable, by a single letter, as x. If the name is “men,” for instance, let x represent “all men,”
         \end{quotation}
       \end{center}
     \end{column}    
@@ -258,38 +258,35 @@
   \par
   a proposition is a declarative statement that is either true or false but not both.
 \end{frame}
-% \begin{frame}
-%   \frametitle{Conceptual Notation}
-%   {\large Frege formalized statements with predicates.}
-%   \begin{itemize}
-%   \item Statements like “$\varphi$ is ~” are represented by predicates $P(\varphi)$ that map argument $\varphi$ to truth values, added to propositional logic.
-%   \item \textcolor{highlight}{Also adds the universal quantifier $\forall$ for “for any $\phi$,” and the existential quantifier $\exists$ for “there exists $x$.”}
-%   \item For instance, the statement “Pets at home are either dogs or cats” is represented as $\forall x. P(x) \rightarrow D(x) \vee C(x)$.
-%   \item Complex propositions can be easily expressed as combinations of simpler ones.
-%   \end{itemize} 
-% \end{frame}
-% \begin{frame}
-%   \frametitle{Russell's Paradox}
-%   {\large A contradiction arises when considering \textcolor{highlight}{sets of sets}.}
-%   \begin{enumerate}
-%   \item Define the set $R$ of all sets that do not contain themselves as a member: $R = \{x | x \notin x \}$.
-%   \item If $R$ is a set that does not contain itself, then by definition, $R$ should be a member of $R$.
-%   \item If $R$ is a set that contains itself, then by definition, $R$ should not be a member of $R$.
-%   \end{enumerate}  
-% \end{frame}
-% \begin{frame}
-%   \frametitle{Russell's Paradox in "The Basic Laws of Arithmetic"}
-%   {\large The cause is Axiom V: \textcolor{highlight}{$\epsilon P = \epsilon Q \equiv \forall x [P(x) \equiv Q(x)]$.}}
-%   \begin{itemize}
-%   \item Axiom V is the condition for the identity of predicates.
-%   \item $\epsilon P$ is the set fulfilling predicate $P$. 
-%     \begin{enumerate}
-%     \item $R$ can be expressed using predicate logic as $\exists P [x = \epsilon P \wedge \neg P(x)]$.
-%     \item Substituting $x$ as $\epsilon R$, we obtain $R(\epsilon R) \equiv \neg R(\epsilon R)$.
-%     \end{enumerate}
-%   \item The beginning of type theory involved Russell's attempt to resolve the paradox by imposing a hierarchical structure, such as predicates of predicate logic not being able to take predicates.
-%   \end{itemize}
-% \end{frame}
+\begin{frame}
+  \frametitle{Conceptual Notation}
+  {\large Frege formalized statements with predicates.}
+  \begin{itemize}
+  \item Statements like “$\varphi$ is ~” are represented by predicates $P(\varphi)$ that map argument $\varphi$ to truth values, added to propositional logic.
+  \item Also adds the universal quantifier $\forall$ for “for any $\phi$,” and the existential quantifier $\exists$ for “there exists $x$.”
+  \item For instance, the statement “Pets at home are either dogs or cats” is represented as $\forall x. P(x) \rightarrow D(x) \vee C(x)$.
+  \item Complex propositions can be easily expressed as combinations of simpler ones.
+  \end{itemize} 
+\end{frame}
+\begin{frame}
+  \frametitle{Russell's Paradox}
+  {\large The paradox reveals a fundamental problem with naive set theory.}
+  \begin{enumerate}
+    \item Consider the set $R$ defined as: $R = \{ x \mid x \notin x \}$, where $R$ includes all sets that do not contain themselves.
+    \item If $R \in R$, then by definition, $R$ should not contain itself.
+    \item If $R \notin R$, then according to the definition, $R$ must contain itself.
+  \end{enumerate}  
+\end{frame}
+\begin{frame}
+  \frametitle{Russell's Paradox in ``Foundations of Arithmetic''}
+  {\large Axiom V, $\epsilon P=\epsilon Q \equiv \forall x [P(x)\equiv Q(x)]$, leads to contradiction.}
+  \begin{itemize}
+  \item $\epsilon P$ represents the set of elements satisfying predicate $P$.
+  \item $R$ can be expressed as $\exists P [x = \epsilon P \wedge \neg P(x)]$ in predicate logic.
+  \item Substituting $x$ as $\epsilon R$, we obtain $R(\epsilon R) \equiv \neg R(\epsilon R)$.    
+  \item In Frege's work, there is a distinction between objects, predicates, and predicates of predicates. This hierarchy can be seen as an early notion of type theory.
+  \end{itemize}
+\end{frame}
 \begin{frame}[allowframebreaks,t]
   \frametitle{References}
   \printbibliography
